Implement trust mark issuance management via admin api
